Don't show the score for macro suggestion and fix the wrapping problem on smaller screens

--- a/src/content/css/content.styl
+++ b/src/content/css/content.styl
@@ -340,6 +340,9 @@ $padding = 8px;
         color: #333;
         padding: 5px 9px 6px 9px;
         margin-right: 4px;
+        margin-top: 6px;
+        white-space: nowrap;
+        float: left;
     }
 
     .macro-title {
